--- a/Dockerfile.rhel7-minimal
+++ b/Dockerfile.rhel7-minimal
@@ -1,6 +1,4 @@
-FROM centos:7
-
-MAINTAINER Chad J. Hamilton <chad.j.hamilton@gmail.com> 
+FROM registry.access.redhat.com/rhel7-minimal
 
 WORKDIR /tmp
 
@@ -9,6 +7,8 @@ USER 0
 
 # Add our init script
 ADD startsiab.sh /opt/startsiab.sh
+# Add our logo
+ADD siab.logo.txt /opt/siab.logo.txt
 # Fix up the Reverse coloring
 ADD black-on-white.css /usr/share/shellinabox/black-on-white.css
 # Add nano syntax highlighting for Dockerfiles
@@ -17,6 +17,8 @@ ADD dockerfile.nanorc /usr/share/nano/dockerfile.nanorc
 ADD javascript.nanorc /usr/share/nano/javascript.nanorc
 # Enable nano syntax highlighting
 ADD nanorc /tmp/nanorc
+# Enable custom motd
+ADD motd /etc/motd
 
 # Install EPEL
 # Install our developer tools (tmux, ansible, nano, vim, bash-completion, wget)
@@ -31,18 +33,24 @@ ADD nanorc /tmp/nanorc
 RUN echo "" && \
     cat /opt/siab.logo.txt && \
     echo "=== Installing EPEL ===" && \
-    yum install -y http://dl.fedoraproject.org/pub/epel/7/x86_64/Packages/e/epel-release-7-11.noarch.rpm && \
+    curl -o /tmp/epel.rpm https://dl.fedoraproject.org/pub/epel/7/x86_64/Packages/e/epel-release-7-14.noarch.rpm && \
+    rpm -ivh /tmp/epel.rpm && \
     echo "\n=== Installing developer tools ===" && \
-    yum install -y jq vim screen which hostname passwd tmux nano wget git bash-completion openssl shellinabox util-linux expect --enablerepo=epel && \
-    yum clean all && \
-    cd /tmp/ && \
-    echo "\n=== Installing oc ===" && \
-    wget https://github.com/openshift/origin/releases/download/v3.10.0/openshift-origin-client-tools-v3.10.0-dd10d17-linux-64bit.tar.gz && \
-    ls -lah /tmp/ && \
-    echo "\n=== Untar'ing 'oc' ===" && \
-    tar zxvf /tmp/openshift-origin-client-tools-v3.10.0-dd10d17-linux-64bit.tar.gz && \
-    echo "\n=== Copying 'oc' ===" && \
-    mv -v /tmp/openshift-origin-client-tools-v3.10.0-dd10d17-linux-64bit/oc /usr/local/bin/ && \
+    microdnf \
+       --enablerepo=rhel-7-server-rpms \
+       --enablerepo=rhel-7-server-extras-rpms \
+       --enablerepo=rhel-7-server-optional-rpms \
+       --enablerepo=rhel-7-server-ose-3.11-rpms \
+       --enablerepo=rhel-7-server-devtools-rpms \
+       --enablerepo=rhel-server-rhscl-7-rpms \
+       --enablerepo=epel \
+       install \
+       jq vim screen which hostname passwd tmux nano wget git \
+       bash-completion openssl shellinabox util-linux expect \
+       atomic-openshift-clients \
+    && \
+    microdnf clean all && \
+    cd /tmp && \
     echo "\n=== Installing 'developer' user ===" && \
     useradd -u 1001 developer -m && \
     mkdir -pv /home/developer/bin /home/developer/tmp && \
@@ -57,7 +65,9 @@ RUN echo "" && \
     echo "\n=== Removing login's lock file ===" && \
     rm -f /var/run/nologin && \
     echo "*** Done building siab container ***" && \
-    cat /opt/siab.logo.txt
+    cat /opt/siab.logo.txt && \
+    echo ""
+
 
 # shellinabox will listen on 8080
 EXPOSE 8080
